CC-master/TinyExpressions/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: body

    2 variable: tIDENTIFIER
    3         | variable '[' expression ']'
    4         | variable '.' tIDENTIFIER

    5 expression: expression '+' expression
    6           | expression '-' expression
    7           | expression '*' expression
    8           | expression '/' expression
    9           | expression '<' expression
   10           | expression '>' expression
   11           | expression AND expression
   12           | expression OR expression
   13           | expression GEQ expression
   14           | expression LEQ expression
   15           | expression NEQ expression
   16           | expression EQ expression
   17           | term

   18 exp_list: expression
   19         | expression ',' exp_list

   20 term: variable
   21     | tINTCONST
   22     | tIDENTIFIER '(' act_list ')'
   23     | '(' expression ')'
   24     | '!' term
   25     | '|' expression '|'
   26     | tBOOL
   27     | tNULL

   28 act_list: exp_list
   29         | %empty

   30 statement: RETURN expression ';'
   31          | WRITE expression ';'
   32          | ALLOCATE variable ';'
   33          | ALLOCATE variable OFLENGTH expression ';'
   34          | variable INC ';'
   35          | variable DEC ';'
   36          | variable '=' expression ';'
   37          | IF expression THEN statement
   38          | IF expression THEN statement ELSE statement
   39          | WHILE expression DO statement
   40          | FOR '(' decl_list ')' INC '[' term ',' term ']' statement
   41          | FOR '(' decl_list ')' DEC '[' term ',' term ']' statement
   42          | '{' statement_list '}'

   43 statement_list: statement
   44               | statement statement_list

   45 declaration: TYPEY tIDENTIFIER '=' type ';'
   46            | function
   47            | VARI var_decl_list ';'

   48 decl_list: declaration decl_list
   49          | %empty

   50 body: decl_list statement_list

   51 var_type: tIDENTIFIER ':' type

   52 var_decl_list: var_type ',' var_decl_list
   53              | var_type

   54 par_decl_list: var_decl_list
   55              | %empty

   56 type: tIDENTIFIER
   57     | INT
   58     | BOOL
   59     | ARRAYOF type
   60     | RECORDOF '{' var_decl_list '}'

   61 function: head body tail

   62 head: FUNC tIDENTIFIER '(' par_decl_list ')' ':' type

   63 tail: END tIDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 24
'(' (40) 22 23 40 41 62
')' (41) 22 23 40 41 62
'*' (42) 7
'+' (43) 5
',' (44) 19 40 41 52
'-' (45) 6
'.' (46) 4
'/' (47) 8
':' (58) 51 62
';' (59) 30 31 32 33 34 35 36 45 47
'<' (60) 9
'=' (61) 36 45
'>' (62) 10
'[' (91) 3 40 41
']' (93) 3 40 41
'{' (123) 42 60
'|' (124) 25
'}' (125) 42 60
error (256)
tINTCONST (258) 21
tIDENTIFIER (259) 2 4 22 45 51 56 62 63
AND (260) 11
OR (261) 12
EQ (262) 16
LEQ (263) 14
GEQ (264) 13
NEQ (265) 15
INC (266) 34 40
DEC (267) 35 41
tBOOL (268) 26
tNULL (269) 27
ERROR (270)
RETURN (271) 30
WHILE (272) 39
ALLOCATE (273) 32 33
WRITE (274) 31
OFLENGTH (275) 33
IF (276) 37 38
ELSE (277) 38
THEN (278) 37 38
DO (279) 39
FOR (280) 40 41
TYPEY (281) 45
ARRAYOF (282) 59
RECORDOF (283) 60
VARI (284) 47
FUNC (285) 62
INT (286) 57
BOOL (287) 58
END (288) 63


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
variable (55)
    on left: 2 3 4, on right: 3 4 20 32 33 34 35 36
expression (56)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17, on right: 3 5 6 7 8
    9 10 11 12 13 14 15 16 18 19 23 25 30 31 33 36 37 38 39
exp_list (57)
    on left: 18 19, on right: 19 28
term (58)
    on left: 20 21 22 23 24 25 26 27, on right: 17 24 40 41
act_list (59)
    on left: 28 29, on right: 22
statement (60)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 37 38
    39 40 41 43 44
statement_list (61)
    on left: 43 44, on right: 42 44 50
declaration (62)
    on left: 45 46 47, on right: 48
decl_list (63)
    on left: 48 49, on right: 40 41 48 50
body (64)
    on left: 50, on right: 1 61
var_type (65)
    on left: 51, on right: 52 53
var_decl_list (66)
    on left: 52 53, on right: 47 52 54 60
par_decl_list (67)
    on left: 54 55, on right: 62
type (68)
    on left: 56 57 58 59 60, on right: 45 51 59 62
function (69)
    on left: 61, on right: 46
head (70)
    on left: 62, on right: 61
tail (71)
    on left: 63, on right: 61


State 0

    0 $accept: . program $end

    TYPEY  shift, and go to state 1
    VARI   shift, and go to state 2
    FUNC   shift, and go to state 3

    $default  reduce using rule 49 (decl_list)

    program      go to state 4
    declaration  go to state 5
    decl_list    go to state 6
    body         go to state 7
    function     go to state 8
    head         go to state 9


State 1

   45 declaration: TYPEY . tIDENTIFIER '=' type ';'

    tIDENTIFIER  shift, and go to state 10


State 2

   47 declaration: VARI . var_decl_list ';'

    tIDENTIFIER  shift, and go to state 11

    var_type       go to state 12
    var_decl_list  go to state 13


State 3

   62 head: FUNC . tIDENTIFIER '(' par_decl_list ')' ':' type

    tIDENTIFIER  shift, and go to state 14


State 4

    0 $accept: program . $end

    $end  shift, and go to state 15


State 5

   48 decl_list: declaration . decl_list

    TYPEY  shift, and go to state 1
    VARI   shift, and go to state 2
    FUNC   shift, and go to state 3

    $default  reduce using rule 49 (decl_list)

    declaration  go to state 5
    decl_list    go to state 16
    function     go to state 8
    head         go to state 9


State 6

   50 body: decl_list . statement_list

    tIDENTIFIER  shift, and go to state 17
    RETURN       shift, and go to state 18
    WHILE        shift, and go to state 19
    ALLOCATE     shift, and go to state 20
    WRITE        shift, and go to state 21
    IF           shift, and go to state 22
    FOR          shift, and go to state 23
    '{'          shift, and go to state 24

    variable        go to state 25
    statement       go to state 26
    statement_list  go to state 27


State 7

    1 program: body .

    $default  reduce using rule 1 (program)


State 8

   46 declaration: function .

    $default  reduce using rule 46 (declaration)


State 9

   61 function: head . body tail

    TYPEY  shift, and go to state 1
    VARI   shift, and go to state 2
    FUNC   shift, and go to state 3

    $default  reduce using rule 49 (decl_list)

    declaration  go to state 5
    decl_list    go to state 6
    body         go to state 28
    function     go to state 8
    head         go to state 9


State 10

   45 declaration: TYPEY tIDENTIFIER . '=' type ';'

    '='  shift, and go to state 29


State 11

   51 var_type: tIDENTIFIER . ':' type

    ':'  shift, and go to state 30


State 12

   52 var_decl_list: var_type . ',' var_decl_list
   53              | var_type .

    ','  shift, and go to state 31

    $default  reduce using rule 53 (var_decl_list)


State 13

   47 declaration: VARI var_decl_list . ';'

    ';'  shift, and go to state 32


State 14

   62 head: FUNC tIDENTIFIER . '(' par_decl_list ')' ':' type

    '('  shift, and go to state 33


State 15

    0 $accept: program $end .

    $default  accept


State 16

   48 decl_list: declaration decl_list .

    $default  reduce using rule 48 (decl_list)


State 17

    2 variable: tIDENTIFIER .

    $default  reduce using rule 2 (variable)


State 18

   30 statement: RETURN . expression ';'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 42
    term        go to state 43


State 19

   39 statement: WHILE . expression DO statement

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 44
    term        go to state 43


State 20

   32 statement: ALLOCATE . variable ';'
   33          | ALLOCATE . variable OFLENGTH expression ';'

    tIDENTIFIER  shift, and go to state 17

    variable  go to state 45


State 21

   31 statement: WRITE . expression ';'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 46
    term        go to state 43


State 22

   37 statement: IF . expression THEN statement
   38          | IF . expression THEN statement ELSE statement

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 47
    term        go to state 43


State 23

   40 statement: FOR . '(' decl_list ')' INC '[' term ',' term ']' statement
   41          | FOR . '(' decl_list ')' DEC '[' term ',' term ']' statement

    '('  shift, and go to state 48


State 24

   42 statement: '{' . statement_list '}'

    tIDENTIFIER  shift, and go to state 17
    RETURN       shift, and go to state 18
    WHILE        shift, and go to state 19
    ALLOCATE     shift, and go to state 20
    WRITE        shift, and go to state 21
    IF           shift, and go to state 22
    FOR          shift, and go to state 23
    '{'          shift, and go to state 24

    variable        go to state 25
    statement       go to state 26
    statement_list  go to state 49


State 25

    3 variable: variable . '[' expression ']'
    4         | variable . '.' tIDENTIFIER
   34 statement: variable . INC ';'
   35          | variable . DEC ';'
   36          | variable . '=' expression ';'

    INC  shift, and go to state 50
    DEC  shift, and go to state 51
    '['  shift, and go to state 52
    '.'  shift, and go to state 53
    '='  shift, and go to state 54


State 26

   43 statement_list: statement .
   44               | statement . statement_list

    tIDENTIFIER  shift, and go to state 17
    RETURN       shift, and go to state 18
    WHILE        shift, and go to state 19
    ALLOCATE     shift, and go to state 20
    WRITE        shift, and go to state 21
    IF           shift, and go to state 22
    FOR          shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 43 (statement_list)

    variable        go to state 25
    statement       go to state 26
    statement_list  go to state 55


State 27

   50 body: decl_list statement_list .

    $default  reduce using rule 50 (body)


State 28

   61 function: head body . tail

    END  shift, and go to state 56

    tail  go to state 57


State 29

   45 declaration: TYPEY tIDENTIFIER '=' . type ';'

    tIDENTIFIER  shift, and go to state 58
    ARRAYOF      shift, and go to state 59
    RECORDOF     shift, and go to state 60
    INT          shift, and go to state 61
    BOOL         shift, and go to state 62

    type  go to state 63


State 30

   51 var_type: tIDENTIFIER ':' . type

    tIDENTIFIER  shift, and go to state 58
    ARRAYOF      shift, and go to state 59
    RECORDOF     shift, and go to state 60
    INT          shift, and go to state 61
    BOOL         shift, and go to state 62

    type  go to state 64


State 31

   52 var_decl_list: var_type ',' . var_decl_list

    tIDENTIFIER  shift, and go to state 11

    var_type       go to state 12
    var_decl_list  go to state 65


State 32

   47 declaration: VARI var_decl_list ';' .

    $default  reduce using rule 47 (declaration)


State 33

   62 head: FUNC tIDENTIFIER '(' . par_decl_list ')' ':' type

    tIDENTIFIER  shift, and go to state 11

    $default  reduce using rule 55 (par_decl_list)

    var_type       go to state 12
    var_decl_list  go to state 66
    par_decl_list  go to state 67


State 34

   21 term: tINTCONST .

    $default  reduce using rule 21 (term)


State 35

    2 variable: tIDENTIFIER .
   22 term: tIDENTIFIER . '(' act_list ')'

    '('  shift, and go to state 68

    $default  reduce using rule 2 (variable)


State 36

   26 term: tBOOL .

    $default  reduce using rule 26 (term)


State 37

   27 term: tNULL .

    $default  reduce using rule 27 (term)


State 38

   23 term: '(' . expression ')'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 69
    term        go to state 43


State 39

   24 term: '!' . term

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable  go to state 41
    term      go to state 70


State 40

   25 term: '|' . expression '|'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 71
    term        go to state 43


State 41

    3 variable: variable . '[' expression ']'
    4         | variable . '.' tIDENTIFIER
   20 term: variable .

    '['  shift, and go to state 52
    '.'  shift, and go to state 53

    $default  reduce using rule 20 (term)


State 42

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   30 statement: RETURN expression . ';'

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    ';'  shift, and go to state 84


State 43

   17 expression: term .

    $default  reduce using rule 17 (expression)


State 44

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   39 statement: WHILE expression . DO statement

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    DO   shift, and go to state 85


State 45

    3 variable: variable . '[' expression ']'
    4         | variable . '.' tIDENTIFIER
   32 statement: ALLOCATE variable . ';'
   33          | ALLOCATE variable . OFLENGTH expression ';'

    OFLENGTH  shift, and go to state 86
    '['       shift, and go to state 52
    '.'       shift, and go to state 53
    ';'       shift, and go to state 87


State 46

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   31 statement: WRITE expression . ';'

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    ';'  shift, and go to state 88


State 47

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   37 statement: IF expression . THEN statement
   38          | IF expression . THEN statement ELSE statement

    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    AND   shift, and go to state 76
    OR    shift, and go to state 77
    EQ    shift, and go to state 78
    LEQ   shift, and go to state 79
    GEQ   shift, and go to state 80
    NEQ   shift, and go to state 81
    '<'   shift, and go to state 82
    '>'   shift, and go to state 83
    THEN  shift, and go to state 89


State 48

   40 statement: FOR '(' . decl_list ')' INC '[' term ',' term ']' statement
   41          | FOR '(' . decl_list ')' DEC '[' term ',' term ']' statement

    TYPEY  shift, and go to state 1
    VARI   shift, and go to state 2
    FUNC   shift, and go to state 3

    $default  reduce using rule 49 (decl_list)

    declaration  go to state 5
    decl_list    go to state 90
    function     go to state 8
    head         go to state 9


State 49

   42 statement: '{' statement_list . '}'

    '}'  shift, and go to state 91


State 50

   34 statement: variable INC . ';'

    ';'  shift, and go to state 92


State 51

   35 statement: variable DEC . ';'

    ';'  shift, and go to state 93


State 52

    3 variable: variable '[' . expression ']'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 94
    term        go to state 43


State 53

    4 variable: variable '.' . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 95


State 54

   36 statement: variable '=' . expression ';'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 96
    term        go to state 43


State 55

   44 statement_list: statement statement_list .

    $default  reduce using rule 44 (statement_list)


State 56

   63 tail: END . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 97


State 57

   61 function: head body tail .

    $default  reduce using rule 61 (function)


State 58

   56 type: tIDENTIFIER .

    $default  reduce using rule 56 (type)


State 59

   59 type: ARRAYOF . type

    tIDENTIFIER  shift, and go to state 58
    ARRAYOF      shift, and go to state 59
    RECORDOF     shift, and go to state 60
    INT          shift, and go to state 61
    BOOL         shift, and go to state 62

    type  go to state 98


State 60

   60 type: RECORDOF . '{' var_decl_list '}'

    '{'  shift, and go to state 99


State 61

   57 type: INT .

    $default  reduce using rule 57 (type)


State 62

   58 type: BOOL .

    $default  reduce using rule 58 (type)


State 63

   45 declaration: TYPEY tIDENTIFIER '=' type . ';'

    ';'  shift, and go to state 100


State 64

   51 var_type: tIDENTIFIER ':' type .

    $default  reduce using rule 51 (var_type)


State 65

   52 var_decl_list: var_type ',' var_decl_list .

    $default  reduce using rule 52 (var_decl_list)


State 66

   54 par_decl_list: var_decl_list .

    $default  reduce using rule 54 (par_decl_list)


State 67

   62 head: FUNC tIDENTIFIER '(' par_decl_list . ')' ':' type

    ')'  shift, and go to state 101


State 68

   22 term: tIDENTIFIER '(' . act_list ')'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    $default  reduce using rule 29 (act_list)

    variable    go to state 41
    expression  go to state 102
    exp_list    go to state 103
    term        go to state 43
    act_list    go to state 104


State 69

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   23 term: '(' expression . ')'

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    ')'  shift, and go to state 105


State 70

   24 term: '!' term .

    $default  reduce using rule 24 (term)


State 71

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   25 term: '|' expression . '|'

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    '|'  shift, and go to state 106


State 72

    5 expression: expression '+' . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 107
    term        go to state 43


State 73

    6 expression: expression '-' . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 108
    term        go to state 43


State 74

    7 expression: expression '*' . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 109
    term        go to state 43


State 75

    8 expression: expression '/' . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 110
    term        go to state 43


State 76

   11 expression: expression AND . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 111
    term        go to state 43


State 77

   12 expression: expression OR . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 112
    term        go to state 43


State 78

   16 expression: expression EQ . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 113
    term        go to state 43


State 79

   14 expression: expression LEQ . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 114
    term        go to state 43


State 80

   13 expression: expression GEQ . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 115
    term        go to state 43


State 81

   15 expression: expression NEQ . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 116
    term        go to state 43


State 82

    9 expression: expression '<' . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 117
    term        go to state 43


State 83

   10 expression: expression '>' . expression

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 118
    term        go to state 43


State 84

   30 statement: RETURN expression ';' .

    $default  reduce using rule 30 (statement)


State 85

   39 statement: WHILE expression DO . statement

    tIDENTIFIER  shift, and go to state 17
    RETURN       shift, and go to state 18
    WHILE        shift, and go to state 19
    ALLOCATE     shift, and go to state 20
    WRITE        shift, and go to state 21
    IF           shift, and go to state 22
    FOR          shift, and go to state 23
    '{'          shift, and go to state 24

    variable   go to state 25
    statement  go to state 119


State 86

   33 statement: ALLOCATE variable OFLENGTH . expression ';'

    tINTCONST    shift, and go to state 34
    tIDENTIFIER  shift, and go to state 35
    tBOOL        shift, and go to state 36
    tNULL        shift, and go to state 37
    '('          shift, and go to state 38
    '!'          shift, and go to state 39
    '|'          shift, and go to state 40

    variable    go to state 41
    expression  go to state 120
    term        go to state 43


State 87

   32 statement: ALLOCATE variable ';' .

    $default  reduce using rule 32 (statement)


State 88

   31 statement: WRITE expression ';' .

    $default  reduce using rule 31 (statement)


State 89

   37 statement: IF expression THEN . statement
   38          | IF expression THEN . statement ELSE statement

    tIDENTIFIER  shift, and go to state 17
    RETURN       shift, and go to state 18
    WHILE        shift, and go to state 19
    ALLOCATE     shift, and go to state 20
    WRITE        shift, and go to state 21
    IF           shift, and go to state 22
    FOR          shift, and go to state 23
    '{'          shift, and go to state 24

    variable   go to state 25
    statement  go to state 121


State 90

   40 statement: FOR '(' decl_list . ')' INC '[' term ',' term ']' statement
   41          | FOR '(' decl_list . ')' DEC '[' term ',' term ']' statement

    ')'  shift, and go to state 122


State 91

   42 statement: '{' statement_list '}' .

    $default  reduce using rule 42 (statement)


State 92

   34 statement: variable INC ';' .

    $default  reduce using rule 34 (statement)


State 93

   35 statement: variable DEC ';' .

    $default  reduce using rule 35 (statement)


State 94

    3 variable: variable '[' expression . ']'
    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    ']'  shift, and go to state 123


State 95

    4 variable: variable '.' tIDENTIFIER .

    $default  reduce using rule 4 (variable)


State 96

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   36 statement: variable '=' expression . ';'

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    ';'  shift, and go to state 124


State 97

   63 tail: END tIDENTIFIER .

    $default  reduce using rule 63 (tail)


State 98

   59 type: ARRAYOF type .

    $default  reduce using rule 59 (type)


State 99

   60 type: RECORDOF '{' . var_decl_list '}'

    tIDENTIFIER  shift, and go to state 11

    var_type       go to state 12
    var_decl_list  go to state 125


State 100

   45 declaration: TYPEY tIDENTIFIER '=' type ';' .

    $default  reduce using rule 45 (declaration)


State 101

   62 head: FUNC tIDENTIFIER '(' par_decl_list ')' . ':' type

    ':'  shift, and go to state 126


State 102

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression
   18 exp_list: expression .
   19         | expression . ',' exp_list

    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
    OR   shift, and go to state 77
    EQ   shift, and go to state 78
    LEQ  shift, and go to state 79
    GEQ  shift, and go to state 80
    NEQ  shift, and go to state 81
    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    ','  shift, and go to state 127

    $default  reduce using rule 18 (exp_list)


State 103

   28 act_list: exp_list .

    $default  reduce using rule 28 (act_list)


State 104

   22 term: tIDENTIFIER '(' act_list . ')'

    ')'  shift, and go to state 128


State 105

   23 term: '(' expression ')' .

    $default  reduce using rule 23 (term)


State 106

   25 term: '|' expression '|' .

    $default  reduce using rule 25 (term)


State 107

    5 expression: expression . '+' expression
    5           | expression '+' expression .
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | expression . '<' expression
   10           | expression . '>' expression
   11           | expression . AND expression
   12           | expression . OR expression
   13           | expression . GEQ expression
   14           | expression . LEQ expression
   15           | expression . NEQ expression
   16           | expression . EQ expression

    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    AND  shift, and go to state 76
